testsuite/tests/typecheck/should_fail/TcCoercibleFail3.stderr

TcCoercibleFail3.hs:12:7: error:
    Couldn't match representation of type ‘NT1’ with that of ‘NT2’
      arising from a use of ‘coerce’
    In the expression: coerce
    In an equation for ‘foo’: foo = coerce
